# axum_multiple_routers

./: Cargo.toml
src/: lib.rs  main.rs
src/routes/: miscellaneous.rs  mod.rs  quotes.rs
src/routes/miscellaneous/: mod.rs  one.rs  three.rs  two.rs
src/routes/quotes/: create.rs  delete.rs  get_all.rs  get_one.rs  mod.rs  update.rs
